--- a/public/index.html
+++ b/public/index.html
@@ -6,36 +6,14 @@
   </head>
   <body>
     <form action="">
-      <input type='text' id='yourname' value="your name here">
-      <button>submit</button>
+      I will
+      <input type='text' id='task' value="your new habit"> every day for next <input type='text' id='weeks' value="4"> weeks.
+      <button id="submitBtn">Start a new habit!</button>
     </form>
+  <div id = "habitView">
+
+  </div>
+  </div>
   </body>
-  <script>
-
-  const submit = function( e ) {
-    // prevent default form action from being carried out
-    e.preventDefault()
-
-    const input = document.querySelector( '#yourname' ),
-          json = { yourname: input.value },
-          body = JSON.stringify( json )
-
-    fetch( '/submit', {
-      method:'POST',
-      body 
-    })
-    .then( function( response ) {
-      // do something with the reponse 
-      console.log( response )
-    })
-
-    return false
-  }
-
-  window.onload = function() {
-    const button = document.querySelector( 'button' )
-    button.onclick = submit
-  }
-
-  </script>
+  <script src="js/scripts.js"></script>
 </html>
