--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,13 @@
         <title>CS4241 Assignment 2</title>
         <meta charset="utf-8">
         <link type="text/css" rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
         <script src="js/scripts.js"></script>
     </head>
     <body onload="getLatestResults()">
         <h1>FPS Stat Calculator</h1>
         <div class="appgrid">
+
             <!-- Form for adding an item -->
             <form class="app-item" id="add" action="">
                 <h3>Add new stats</h3>
@@ -44,8 +46,6 @@
                 <button type="button" onclick="handle_modify()">Modify</button>
             </form>
 
-            <div></div>
-
             <!-- Form for deleting a row in the table -->
             <form class="app-item" id="delete" action="">
                 <h3>Delete row of stats</h3>
@@ -54,6 +54,7 @@
                 <button type="button" onclick="handle_delete()">Delete</button>
             </form>
 
+            <!-- Table that displays total and average of each stat -->
             <table class="app-item" id="total_avg_results">
                 <thead>
                     <tr>
@@ -81,9 +82,10 @@
                 </tbody>
             </table>
 
+            <!-- Lets user download all table data as a .csv file -->
             <button id="download_button" type="button" onclick="handle_csv()">Download as CSV</button>
 
-            <!-- Table for displaying all stats-->
+            <!-- Table for displaying all stats from each game -->
             <table class="app-item" id="results_list">
                 <thead>
                     <tr>
@@ -95,19 +97,11 @@
                         <th>A/D Ratio</th>
                     </tr>
                 </thead>
+                <!-- This body will be replaced with a new one whenever
+                the content of the table is updated -->
                 <tbody></tbody>
             </table>
-            <!--
-            <div class="app-item total_results_panel">
-                <div class="total_results_label">Total Kills: </div>
-                <div class="total_results_item" id="total_kills">0</div>
-                <div class="total_results_label"> | Total Assists: </div>
-                <div class="total_results_item" id="total_assists">0</div>
-                <div class="total_results_label"> | Total Deaths: </div>
-                <div class="total_results_item" id="total_deaths">0</div>
-            </div>
-            -->
 
-        </div>
+        </div><!-- End of .appgrid -->
     </body>
 </html>
