fixed form error from validator

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <div class="column" id="leftColumn">
       <h2>Collected User Reviews</h2>
 
-      <form action="" id="formID">
+      <form id="formID">
         <div class="horizontal-flex margin-spacer">
           <label>Your Name: </label>
           <input type='text' id='username' placeholder="John Doe">
