removed action so I can validate

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
         <h1 id="form-title">Please fill this form out</h1>
       </div>
       <div id="form-section" class="jumbotron">
-        <form class="needs-validation" action="" novalidate>
+        <form class="needs-validation" novalidate>
           <div class="form-row">
             <div class="col-md-4 mb-3">
               <label for="fName">First name</label>
