--- a/public/index.html
+++ b/public/index.html
@@ -10,17 +10,18 @@
 
     <!--Links external scripts and styles-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Charmonman:wght@700&display=swap" rel="stylesheet">
   </head>
   <body style="background-color: rgb(234,236,239);">
     <nav class="navbar navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="#" class="special-font">
         <img src="https://images.emojiterra.com/google/android-10/512px/1f389.png" width="30" height="30" class="d-inline-block align-top" alt="Party Popper">
         Party Guest List
       </a>
     </nav>
     <div>
       <div id="form-header" class="jumbotron">
-        <h1 id="form-title">Please fill this form out</h1>
+        <h1 id="form-title" class="special-font">Please fill this form out</h1>
       </div>
       <div id="form-section" class="jumbotron">
         <form class="needs-validation" novalidate>
@@ -72,7 +73,7 @@
       </div>
     </div>
     <div id="table-header" class="jumbotron">
-      <h1 id="table-title">Guest List</h1>
+      <h1 id="table-title" class="special-font">Guest List</h1>
     </div>
     <div id="table-section" class="jumbotron">
       <table class="table">
