--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   </head>
   <body style="background-color: rgb(234,236,239);">
     <nav class="navbar navbar-dark bg-dark">
-      <a class="navbar-brand" href="#" class="special-font">
+      <a class="navbar-brand special-font" href="#">
         <img src="https://images.emojiterra.com/google/android-10/512px/1f389.png" width="30" height="30" class="d-inline-block align-top" alt="Party Popper">
         Party Guest List
       </a>
