added modify code

--- a/public/index.html
+++ b/public/index.html
@@ -84,6 +84,7 @@
             <th scope="col">Birthday</th>
             <th scope="col">Able to Drink</th>
             <th scope="col">Delete</th>
+            <th scope="col">Modify</th>
           </tr>
         </thead>
         <tbody id="table-body">
