--- a/public/index.html
+++ b/public/index.html
@@ -3,201 +3,137 @@
   <head>
     <title>Coronavirus Symtom Tracker 2.0</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="/css/style.css">
+    <script src="/js/scripts.js"></script>
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=PT+Sans" />
   </head>
   <body>
-    <h1>Make a new user</h1>
-    <form action="">
-	  <label for="userName">User Name:</label><br>
-      <input type="text" id="userName" value=""><br><br>
-	  <label for="userID">User ID:</label><br>
-      <input type="number" id="userID" value=""><br><br>
-	  <label for="userPassword">User Password:</label><br>
-      <input type="password" id="userPassword" value=""><br><br>
-    <label for="userTemp">Resting Temperature (°F):</label><br>
-      <input type="number" id="userTemp" value=""><br><br> 
-    <h3>Do you have any of the following symptoms on a regular basis?</h3>
-    <label for="userChills">Chills:</label><br>
-      <input type="checkbox" id="userChills" value="0"><br><br> 
-    <label for="userCough">Cough:</label><br>
-      <input type="checkbox" id="userCough" value="0"><br><br> 
-    <label for="userBreath">Shortness of Breath:</label><br>
-      <input type="checkbox" id="userBreath" value="0"><br><br> 
-    <label for="userThroat">Sore Throat:</label><br>
-      <input type="checkbox" id="userThroat" value="0"><br><br> 
-    <label for="userFatigue">Fatigue:</label><br>
-      <input type="checkbox" id="userFatigue" value="0"><br><br> 
-    <label for="userHeadache">Headache:</label><br>
-      <input type="checkbox" id="userHeadache" value="0"><br><br> 
-    <label for="userAche">Muscle Aches:</label><br>
-      <input type="checkbox" id="userAche" value="0"><br><br> 
-    <label for="userNose">Runny Nose or Congestion:</label><br>
-      <input type="checkbox" id="userNose" value="0"><br><br> 
-    <label for="userLoss">Loss of taste or smell:</label><br>
-      <input type="checkbox" id="userLoss" value="0"><br><br> 
-    <label for="userNausea">Nausea:</label><br>
-      <input type="checkbox" id="userNausea" value="0"><br><br> 
-    <label for="userDiarrhea">Nausea:</label><br>
-      <input type="checkbox" id="userDiarrhea" value="0"><br><br> 
-      <br><button id="newUserButton">Submit</button>
-      <br><br><button id="resetButton">Reset</button>
-    </form>
-    <h1>Update a Current User</h1>
-    <form action="">
-	  <label for="updateUserName">User Name:</label><br>
-      <input type="text" id="updateUserName" value=""><br><br>
-	  <label for="updateUserPassword">User Password:</label><br>
-      <input type="password" id="updateUserPassword" value=""><br><br>
-      <label for="updateUserTemp">Current Temperature (°F):</label><br>
-        <input type="number" id="updateUserTemp" value=""><br><br> 
-      <label for="updateUserPositive">Have you tested positive for Covid19 in the past 14 days?:</label><br>
-        <input type="checkbox" id="updateUserPositive" value="0"><br><br> 
-      <label for="updateUserContact">Have you been in close contact with someone who has been diagnosed with Covid19 in the past 14 days?:</label><br>
-        <input type="checkbox" id="updateUserContact" value="0"><br><br> 
-      <h3>Do you have any of the following symptoms today?</h3>
-      <label for="updateUserChills">Chills:</label><br>
-        <input type="checkbox" id="updateUserChills" value="0"><br><br> 
-      <label for="updateUserCough">Cough:</label><br>
-        <input type="checkbox" id="updateUserCough" value="0"><br><br> 
-      <label for="updateUserBreath">Shortness of Breath:</label><br>
-        <input type="checkbox" id="updateUserBreath" value="0"><br><br> 
-      <label for="updateUserThroat">Sore Throat:</label><br>
-        <input type="checkbox" id="updateUserThroat" value="0"><br><br> 
-      <label for="updateUserFatigue">Fatigue:</label><br>
-        <input type="checkbox" id="updateUserFatigue" value="0"><br><br> 
-      <label for="updateUserHeadache">Headache:</label><br>
-        <input type="checkbox" id="updateUserHeadache" value="0"><br><br> 
-      <label for="updateUserAche">Muscle Aches:</label><br>
-        <input type="checkbox" id="updateUserAche" value="0"><br><br> 
-      <label for="updateUserNose">Runny Nose or Congestion:</label><br>
-        <input type="checkbox" id="updateUserNose" value="0"><br><br> 
-      <label for="updateUserLoss">Loss of taste or smell:</label><br>
-        <input type="checkbox" id="updateUserLoss" value="0"><br><br> 
-      <label for="updateUserNausea">Nausea:</label><br>
-        <input type="checkbox" id="updateUserNausea" value="0"><br><br> 
-      <label for="updateUserDiarrhea">Nausea:</label><br>
-        <input type="checkbox" id="updateUserDiarrhea" value="0"><br><br> 
-      <br><button id="updateButton">Update</button>
-    </form>
-    <h1>Current Users</h1>
-    <p id="database"></p>
+    <br><h1>Coronavirus Symptom Tracker 2.0</h1><br>
+    <button type="button" class="collapsible"><h2>Make a new user</h2></button>
+    <div class="content">
+      <br>
+      <form action="">
+        <div class="rows2">
+          <label for="userName">User Name:<br>
+            <input type="text" id="userName" value="">
+          </label>
+          <label for="userID">User ID Number:<br>
+            <input type="number" id="userID" value="">
+          </label>
+          <label for="userPassword">User Password:<br>
+            <input type="password" id="userPassword" value="">
+          </label>
+          <label for="userTemp">Resting Temperature (°F):<br>
+            <input type="number" id="userTemp" value="">
+          </label>
+        </div><br><br>
+        <button type="button" class="collapsible symptom"><h3>Do you have any of the following symptoms on a regular basis?</h3></button>
+        <div class="content symptom"><br>
+          <div class="symptomColumns">
+            <label for="userChills">Chills:
+              <input type="checkbox" id="userChills" value="0">
+            </label>
+            <label for="userCough">Cough:
+              <input type="checkbox" id="userCough" value="0"> 
+            </label>
+            <label for="userBreath">Shortness of Breath:
+              <input type="checkbox" id="userBreath" value="0"> 
+            </label>
+            <label for="userThroat">Sore Throat:
+              <input type="checkbox" id="userThroat" value="0"> 
+            </label>
+            <label for="userFatigue">Fatigue:
+              <input type="checkbox" id="userFatigue" value="0">
+            </label>
+            <label for="userHeadache">Headache:
+              <input type="checkbox" id="userHeadache" value="0"> 
+            </label>
+            <label for="userAche">Muscle Aches:
+              <input type="checkbox" id="userAche" value="0"> 
+            </label>
+            <label for="userNose">Runny Nose or Congestion:
+              <input type="checkbox" id="userNose" value="0"> 
+            </label>
+            <label for="userLoss">Loss of taste or smell:
+              <input type="checkbox" id="userLoss" value="0"> 
+            </label>
+            <label for="userNausea">Nausea:
+              <input type="checkbox" id="userNausea" value="0"> 
+            </label>
+            <label for="userDiarrhea">Diarrhea:
+              <input type="checkbox" id="userDiarrhea" value="0">
+            </label>
+          </div>
+        </div>
+        <br><br><button id="newUserButton">Submit</button>
+      </form><br>
+    </div><br><br>
+    <button type="button" class="collapsible"><h2>Update a Current User</h2></button>
+    <div class="content">
+      <br>
+      <form action="">
+        <div class="rows3">
+          <label for="updateUserName">User Name:
+            <input type="text" id="updateUserName" value="">
+          </label>
+          <label for="updateUserPassword">User Password:
+            <input type="password" id="updateUserPassword" value="">
+          </label>
+          <label for="updateUserTemp">Current Temperature (°F):
+            <input type="number" id="updateUserTemp" value="">
+          </label>
+        </div>
+        <div class="column2">
+          <label for="updateUserPositive">Have you tested positive for Covid19 in the past 14 days?:
+            <input type="checkbox" id="updateUserPositive" value="0">
+          </label>
+          <label for="updateUserContact">Have you been in close contact with someone who has been diagnosed with Covid19 in the past 14 days?:
+            <input type="checkbox" id="updateUserContact" value="0">
+          </label>
+        </div><br>
+        <button type="button" class="collapsible symptom"><h3>Do you have any of the following symptoms today?</h3></button>
+        <div class="content symptom"><br>
+          <div class="symptomColumns">
+            <label for="updateUserChills">Chills:
+              <input type="checkbox" id="updateUserChills" value="0">
+            </label>
+            <label for="updateUserCough">Cough:
+              <input type="checkbox" id="updateUserCough" value="0">
+            </label>
+            <label for="updateUserBreath">Shortness of Breath:
+              <input type="checkbox" id="updateUserBreath" value="0">
+            </label>
+            <label for="updateUserThroat">Sore Throat:
+              <input type="checkbox" id="updateUserThroat" value="0"> 
+            </label>
+            <label for="updateUserFatigue">Fatigue:
+              <input type="checkbox" id="updateUserFatigue" value="0">
+            </label>
+            <label for="updateUserHeadache">Headache:
+              <input type="checkbox" id="updateUserHeadache" value="0">
+            </label>
+            <label for="updateUserAche">Muscle Aches:
+              <input type="checkbox" id="updateUserAche" value="0">
+            </label>
+            <label for="updateUserNose">Runny Nose or Congestion:
+              <input type="checkbox" id="updateUserNose" value="0"> 
+            </label>
+            <label for="updateUserLoss">Loss of taste or smell:
+              <input type="checkbox" id="updateUserLoss" value="0"> 
+            </label>
+            <label for="updateUserNausea">Nausea:
+              <input type="checkbox" id="updateUserNausea" value="0">
+            </label>
+            <label for="updateUserDiarrhea">Diarrhea:
+              <input type="checkbox" id="updateUserDiarrhea" value="0">
+            </label>
+          </div>
+        </div>
+        <br><br><button id="updateButton">Update</button><br><br>
+      </form>
+    </div><br>
+    <h2>Current Users</h2>
+    <div id="database"></div><br><br>
+    <button id="resetButton">Reset Database</button><br><br>
   </body>
-  <script>
-  const statusMessages = ["All clear", "Be cautious", "Covid19 risk"]
-  const newUser = function( e ) {
-    // prevent default form action from being carried out
-    e.preventDefault()
-    const json = { 
-		  userName: document.querySelector( '#userName' ).value,
-		  userID: document.querySelector( '#userID' ).value,
-		  userPassword: document.querySelector( '#userPassword' ).value,
-      userTemp: document.querySelector( '#userTemp' ).value,
-      userChills: document.querySelector( '#userChills' ).checked,
-      userCough: document.querySelector( '#userCough' ).checked,
-      userBreath: document.querySelector( '#userBreath' ).checked,
-      userThroat: document.querySelector( '#userThroat' ).checked,
-      userFatigue: document.querySelector( '#userFatigue' ).checked,
-      userHeadache: document.querySelector( '#userHeadache' ).checked,
-      userAche: document.querySelector( '#userAche' ).checked,
-      userNose: document.querySelector( '#userNose' ).checked,
-      userLoss: document.querySelector( '#userLoss' ).checked,
-      userNausea: document.querySelector( '#userNausea' ).checked,
-      userDiarrhea: document.querySelector( '#userDiarrhea' ).checked,
-      userStatus: 0
-		  },
-          body = JSON.stringify( json )
-    
-    fetch( '/newUser', {
-      method:'POST',
-      body 
-    })
-    .then( function( response ) {
-      // do something with the reponse 
-      return response.text()
-    })
-    .then( function( text ) {
-      entries = text.split("},");
-      console.log("Data:")
-      document.getElementById("database").innerHTML = "";
-      for (const entry of entries) {
-        var entryjson = JSON.parse(entry+(entry.slice(-1) == "}" ? "" : "}"));
-        document.getElementById("database").innerHTML += entryjson.userName + " (" + entryjson.userID + "): " + statusMessages[entryjson.userStatus] + "<br>";
-        // console.log( entryjson );//can access elements with .elementName
-      }      
-    })
-
-    return false
-  }
-  
-  const update = function( e ) {
-    // prevent default form action from being carried out
-    e.preventDefault()
-    const json = { 
-      userName: document.querySelector( '#updateUserName' ).value,
-      userPassword: document.querySelector( '#updateUserPassword' ).value,
-      userTemp: document.querySelector( '#updateUserTemp' ).value,
-      userPositive: document.querySelector( '#updateUserPositive' ).checked,
-      userContact: document.querySelector( '#updateUserContact' ).checked,
-      userChills: document.querySelector( '#updateUserChills' ).checked,
-      userCough: document.querySelector( '#updateUserCough' ).checked,
-      userBreath: document.querySelector( '#updateUserBreath' ).checked,
-      userThroat: document.querySelector( '#updateUserThroat' ).checked,
-      userFatigue: document.querySelector( '#updateUserFatigue' ).checked,
-      userHeadache: document.querySelector( '#updateUserHeadache' ).checked,
-      userAche: document.querySelector( '#updateUserAche' ).checked,
-      userNose: document.querySelector( '#updateUserNose' ).checked,
-      userLoss: document.querySelector( '#updateUserLoss' ).checked,
-      userNausea: document.querySelector( '#updateUserNausea' ).checked,
-      userDiarrhea: document.querySelector( '#updateUserDiarrhea' ).checked
-      },
-          body = JSON.stringify( json )
-
-    fetch( '/update', {
-      method:'POST',
-      body 
-    })
-    .then( function( response ) {
-      // do something with the reponse 
-      return response.text()
-    })
-    .then( function( text ) {
-      entries = text.split("},");
-      console.log("Data:")
-      document.getElementById("database").innerHTML = "";
-      for (const entry of entries) {
-        // console.log(entry);
-        var entryjson = JSON.parse(entry+(entry.slice(-1) == "}" ? "" : "}"));
-        document.getElementById("database").innerHTML += entryjson.userName + " (" + entryjson.userID + "): " + statusMessages[entryjson.userStatus] + "<br>";
-      }      
-    })
-
-    return false
-  }
-  
-  const reset = function( e ) {
-    // prevent default form action from being carried out
-    e.preventDefault()
-
-    fetch( '/reset', {
-      method:'POST',
-      body: "{}" 
-    })
-    .then( function( response ) {
-      // do something with the reponse 
-      console.log("RESET")
-      document.getElementById("database").innerText = "Database cleared.";
-    })
-
-    return false
-  }
-
-  window.onload = function() {
-    const newUserButton = document.querySelector( '#newUserButton' )
-    newUserButton.onclick = newUser
-    const resetButton = document.querySelector( '#resetButton' )
-    resetButton.onclick = reset
-    const updateButton = document.querySelector( '#updateButton' )
-    updateButton.onclick = update
-  }
-
-  </script>
 </html>
