--- a/public/tasks.html
+++ b/public/tasks.html
@@ -1,9 +1,16 @@
-<html>
-    <script>
-        let tasks = [
-            {taskName: "dishes", priority: "8", creationDate: "9/11/2020", dueDate: moment().add(2, 'days').format("MM/DD/YYYY")},
-            {taskName: "laundry", priority: "4", creationDate: "9/11/2020", dueDate: moment().add(6, 'days').format("MM/DD/YYYY")},
-            {taskName: "homework", priority: "6", creationDate: "9/11/2020", dueDate: moment().add(4, 'days').format("MM/DD/YYYY")}
-        ];
-    </script>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>Tasks Page</title>
+        <meta charset="utf-8">
+    </head>
+    <body>
+        <script>
+            let tasks = [
+                {taskName: "dishes", priority: "8", creationDate: "9/11/2020", dueDate: moment().add(2, 'days').format("MM/DD/YYYY")},
+                {taskName: "laundry", priority: "4", creationDate: "9/11/2020", dueDate: moment().add(6, 'days').format("MM/DD/YYYY")},
+                {taskName: "homework", priority: "6", creationDate: "9/11/2020", dueDate: moment().add(4, 'days').format("MM/DD/YYYY")}
+            ];
+        </script>
+    </body>
 </html>
