--- a/public/index.html
+++ b/public/index.html
@@ -3,39 +3,27 @@
   <head>
     <title>CS4241 Assignment 2</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/style.css">
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
+    <script type="text/javascript" src="js/scripts.js"></script>
   </head>
   <body>
-    <form action="">
-      <input type='text' id='yourname' value="your name here">
-      <button>submit</button>
-    </form>
+    <div id="left-block" class='container'>
+      <div id="scores">
+        Current: <span id="currScore">60</span><br>
+        High: 69
+      </div>
+    </div>
+    <div id="center-block" class='container'>
+      <div id="scrambled">
+        <h2>Unscramble the Words!</h2>
+        <div id="scrambledWord"></div>
+      </div>
+      <div id="inputs">
+        <form onsubmit="return false">
+          <input type='text' maxlength="7" id='answer'>
+        </form>
+      </div>
+    </div>
   </body>
-  <script>
-
-  const submit = function( e ) {
-    // prevent default form action from being carried out
-    e.preventDefault()
-
-    const input = document.querySelector( '#yourname' ),
-          json = { yourname: input.value },
-          body = JSON.stringify( json )
-
-    fetch( '/submit', {
-      method:'POST',
-      body 
-    })
-    .then( function( response ) {
-      // do something with the reponse 
-      console.log( response )
-    })
-
-    return false
-  }
-
-  window.onload = function() {
-    const button = document.querySelector( 'button' )
-    button.onclick = submit
-  }
-
-  </script>
 </html>
