--- a/public/index.html
+++ b/public/index.html
@@ -1,62 +1,85 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <title>CS4241 Assignment 2</title>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
   </head>
   <body>
     <form action="">
-      <label for="priority"> Task </label><br>
-      <input type="text" id="yourtask" value="your task here"><br><br>
-      <label for="priority"> Creation Date </label><br>
-      <input type="date" id="taskduedate" value="date"><br><br>
-      <label for="priority"> Priority </label><br>
-      <input type="radio" id="priority1" name="priority" value="high_priority">
-      <label for="high_priority"> High Priority </label><br>
-      <input type="radio" id="priority2" name="priority" value="med_priority">
-      <label for="med_priority"> Medium Priority </label><br>
-      <input type="radio" id="priority3" name="priority" value="low_priority">
-      <label for="med_priority"> Low Priority </label><br><br>
+      <label for="priority"> Task </label><br />
+      <input type="text" id="yourtask" value="your task here" /><br /><br />
+      <label for="priority"> Creation Date </label><br />
+      <input type="date" id="taskduedate" value="date" /><br /><br />
+      <label for="priority"> Priority </label><br />
+      <input
+        type="radio"
+        id="priority1"
+        name="priority"
+        value="high_priority"
+      />
+      <label for="high_priority"> High Priority </label><br />
+      <input type="radio" id="priority2" name="priority" value="med_priority" />
+      <label for="med_priority"> Medium Priority </label><br />
+      <input type="radio" id="priority3" name="priority" value="low_priority" />
+      <label for="med_priority"> Low Priority </label><br /><br />
       <button>Submit</button>
     </form>
   </body>
   <script>
+    function addRows(json) {
+      //Find the table
+      const tableBody = document.getElementById("groceryBody");
+      //Insert a new row and then new cells
+      let row = tableBody.insertRow(-1);
+      let cell1 = row.insertCell(0);
+      let cell2 = row.insertCell(1);
+      let cell3 = row.insertCell(2);
+      let cell4 = row.insertCell(3);
 
-  const submit = function( e ) {
-    // prevent default form action from being carried out
-    e.preventDefault()
-    
-    function displayRadioValue() {
-      var ele = document.getElementsByName("priority");
-      
-      for (i = 0; i < ele.length; i++) {
-        if (ele[i].checked)
-          return ele[i].value
-      }
+      //Fill those cells with the data gotten back from the server, this includes the new fields
+      cell1.innerHTML = jsonEntry.quantity;
+      cell2.innerHTML = jsonEntry.food;
+      cell3.innerHTML = jsonEntry.cal;
+      cell4.innerHTML = '<button class="checkButton">✓</button>';
     }
 
-    const input1 = document.querySelector( '#yourtask' ),
-          input2 = document.querySelector( '#taskduedate' ),
-          input3 = displayRadioValue(),
-          json1 = { yourname: input1.value, date: input2.value, priority: input3 },
-          body = JSON.stringify( json1 )
+    const submit = function(e) {
+      // prevent default form action from being carried out
+      e.preventDefault();
 
-    fetch( '/submit', {
-      method:'POST',
-      body
-    })
-    .then( function( response ) {
-      // do something with the reponse 
-      console.log( response )
-    })
+      function displayRadioValue() {
+        var ele = document.getElementsByName("priority");
 
-    return false
-  }
+        for (i = 0; i < ele.length; i++) {
+          if (ele[i].checked) return ele[i].value;
+        }
+      }
 
-  window.onload = function() {
-    const button = document.querySelector( 'button' )
-    button.onclick = submit
-  }
+      const input1 = document.querySelector("#yourtask"),
+        input2 = document.querySelector("#taskduedate"),
+        input3 = displayRadioValue(),
+        json1 = {
+          yourname: input1.value,
+          date: input2.value,
+          priority: input3
+        },
+        body = JSON.stringify(json1);
 
+      fetch("/submit", {
+        method: "POST",
+        body
+      }).then(function(response) {
+        // do something with the reponse
+        addRows(response);
+        console.log(response);
+      });
+
+      return false;
+    };
+
+    window.onload = function() {
+      const button = document.querySelector("button");
+      button.onclick = submit;
+    };
   </script>
 </html>
