👖🎈 Checkpoint ./public/index.html:21845626/103

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     </h1>
     <form action="">
       <label for="priority"> Task </label><br />
-      <input type="text" id="yourtask" value="your task here" /><br /><br />
+      <input type="text" id="yourtask" value="Enter your task here" /><br /><br />
       <label for="priority"> Creation Date </label><br />
       <input type="date" id="taskduedate" value="date" /><br /><br />
       <label for="priority"> Priority </label><br />
@@ -28,11 +28,7 @@
       <button>Submit</button>
     </form>
 
-    <table id="groceryTable">
-      <thead>
-        <tr>
-          <th>Work List</th>
-        </tr>
+    <table id="toDoTable">
         <tr>
           <th>Creation Date</th>
           <th>Task</th>
